:art: Avoid illegal reflective access in ContextOverridingClassLoader